fixed a link styling and fixed legend spacing on carousel

--- a/client/src/styles/Carousel.css
+++ b/client/src/styles/Carousel.css
@@ -19,7 +19,7 @@
     border-radius: 10px;
     background: rgba(0, 0, 0, 0.7);
     color: #fff;
-    padding-top: 3.8em;
+    padding-top: 4em;
     font-size: 1.8em;
     text-align: center;
     opacity: 1;
